# esp32-e-paper-clock

./: CMakeLists.txt  README.md  partitions.csv  pinout.xlsx  sdkconfig
components/AHT21/: CMakeLists.txt
components/AHT21/include/: AHT21.h
components/AHT21/src/: AHT21.c  MPU6500.c
components/HC905A/: CMakeLists.txt
components/HC905A/include/: HC905A.h
components/HC905A/src/: HC905A.c
components/MPU6500/: CMakeLists.txt
components/MPU6500/include/: MPU6500.h
components/MPU6500/src/: MPU6500.c  MPU6500.cpp
components/adc_reader/: CMakeLists.txt
components/additional_functions/: CMakeLists.txt
components/clock_http_client/: CMakeLists.txt
components/clock_macro/: CMakeLists.txt
components/clock_memory/: CMakeLists.txt
components/clock_module/: CMakeLists.txt
components/clock_system/: CMakeLists.txt
components/device_common/: CMakeLists.txt
components/device_common/include/: device_common.h
components/device_common/src/: device_common.c  device_gpio.c
components/device_macro/: CMakeLists.txt
components/device_system/: CMakeLists.txt
components/device_system/include/: device_system.h
components/device_system/src/: device_gpio.c  device_system.c
components/epaper-adapter/: CMakeLists.txt
components/epaper_adapter/: CMakeLists.txt
components/http_client/: CMakeLists.txt
components/i2c_module/: CMakeLists.txt
components/network_service/: CMakeLists.txt
components/periodic_taks/: CMakeLists.txt
components/periodic_task/: CMakeLists.txt
components/screen_handler/: CMakeLists.txt
components/screen_handler/include/: screen_handler.h
components/screen_handler/src/: screen_handler.c
components/setting_server/: CMakeLists.txt
components/setting_server/embedded_files/: script.js  style.css
components/setting_server/include/: setting_server.h
components/setting_server/src/: setting_server.c  setting_server.cpp
components/sound_generator/: CMakeLists.txt
components/wifi_service/: CMakeLists.txt
main/: CMakeLists.txt  clock_config.h  main.c  main.cpp
(+48 files in other folders)
